--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/tsconfig": "^0.5.1",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
+    "sass-embedded": "^1.81.0",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
